<resources>
    <string name="app_name">RegistrationApp</string>
    <string name="enter_names">Enter Names</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_email">Enter Email</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="agree_to_term_and_conditions">Agree to term and conditions</string>
    <string name="submit">Submit</string>
</resources>
